Fix map overlap

--- a/src/web/static/main.css
+++ b/src/web/static/main.css
@@ -64,13 +64,16 @@
     background-color: var(--main-background-color);
 }
 
-#info {
+#info-box {
     position: absolute;
-    left: 16px;
-    right: 16px;
-    bottom: 16px;
-    min-height: 300px;
+    left: 0;
+    right: 0;
+    bottom: 0;
     z-index: 10;
+    padding: 0 16px 16px 16px;
+}
+#info {
+    min-height: 300px;
     background-color: rgba(20,20,20,0.85);
     border-radius: 10px;
     padding: 20px;
